--- a/estilo.css
+++ b/estilo.css
@@ -49,6 +49,7 @@ html {
   background-color: #fcaf62;
   padding: 10px;
   color: #ffffff;
+  margin-top: 30px;
 }
 
 .img_acercade {
@@ -62,6 +63,63 @@ html {
 
 .article_container {
   padding-left: 100px;
+}
+
+.fieldset_form {
+  margin-bottom: 25px;
+  width: 45%;
+}
+
+.fieldset_div {
+  margin-top: 10px;
+}
+
+.fieldset_tabla {
+  margin-top: 25px;
+}
+
+.fieldset_legend {
+  background-color: #b1cdd9;
+  border: 2px black;
+  font-size: large;
+  font-style: italic;
+  font-weight: bold;
+}
+
+.legend_form {
+  font-style: italic;
+}
+
+.div_edad {
+  display: flex;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+#edad_valor {
+  font-size: large;
+  margin-left: 10px;
+}
+
+.button_form {
+  margin-top: 10px;
+  padding: 12px 28px;
+  font-size: large;
+  border-radius: 4px;
+  transition-duration: 0.4s;  
+}
+
+.button_form:hover {
+  background-color: #fcaf62;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
+  cursor: pointer;
+  /* box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19); */
+}
+
+.grid_form {
+  display: grid;
+  width: 50%;
+  grid-template-columns: 1fr 1fr;
 }
 
 /*
@@ -123,3 +181,27 @@ a {
     background: darkred;
     color: white;
   }
+
+  fieldset {
+    background: #f5f6f7;
+    border: 2px solid rgb(73, 73, 75);
+  }
+
+  table {
+    width: 50%;
+    background-color: #f2f2d1;
+  }
+
+  table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+
+  th, td {
+    padding: 20px;
+  }
+
+  th {
+    text-align: left;
+  }
+        
